# juanfi-monitor

./: .env.example  .gitignore  Readme.md  app.db  command.py  database.py  docker-compose.yml  juanfi_api.py  juanfi_logger.py  log_repository.py  main.py  migration.py  package-lock.json  poetry.lockx  pyproject.toml  requirements.txt  seeder.py  setup.py  user_repository.py
.github/workflows/: node.js.yml
client-pwa/: package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
client-pwa/src/: app.d.ts  app.html  hooks.server.txt  service-worker.js
client-pwa/src/lib/: env.ts  http.ts  interfaces.ts  store.ts
client-pwa/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  (+1 more)
client-pwa/static/: manifest.json
commands/: user_command.py  vendo_add.py  vendo_status_log.py
controllers/api/: log_controller.py  login_controller.py  sale_controller.py  vendo_controller.py  vendo_status_controller.py  withdrawal_controller.py
docker/node/: Dockerfile
docker/python/: Dockerfile
migrations/: env.py
migrations/versions/: 02c62e022aee_add_rewards.py  3a75e5768984_create_notifications.py  3e764100138c_add_withdrawls.py  4d7554a6bc00_first_migration.py  7d48c782ea03_add_columns_to_vendo_status.py  86b3c2f0b2c5_first_migration.py  88179bf1371a_add_is_active.py
models/: vendo.py
repository/: log_repository.py  notification_repository.py  reward_repository.py  sale_repository.py  user_repository.py  vendo_repository.py  vendo_status_repository.py  withdrawal_repository.py
sql_app/: database.py  models.py  schemas.py
(+61 files in other folders)
